# Student-Registration-App

./: .gitignore  CMakeLists.txt  README.md  build.bat  elements.hpp  main.cpp  main1.cpp  student.h  textsAndFonts.hpp
include/: raygui.h
src/: app.rc  art.txt  buttonsAndTextFields.hpp  main1.cpp  mainMenuElements.hpp  student.h  textsAndFonts.hpp  variables.hpp
src/records/availableSlots/: year2023.json  year2026.json
